# SeedVR

./: .gitignore  pyproject.toml  readme.md  requirements.txt
common/: seed.py
common/distributed/: basic.py  ops.py
configs_3b/: __init__.py
projects/: inference_seedvr2_3b.py  inference_seedvr2_7b.py  inference_seedvr_3b.py  inference_seedvr_7b.py
seedvr/: __init__.py
seedvr/common/: decorators.py
seedvr/common/distributed/: advanced.py  ops.py
seedvr/configs/: __init__.py  seedvr2_7b.yaml
seedvr/configs_3b/: main.yaml
seedvr/configs_7b/: __init__.py
seedvr/models/dit_v2/: normalization.py
seedvr/projects/: inference_seedvr2_3b.py  inference_seedvr2_7b.py  inference_seedvr_3b.py  inference_seedvr_7b.py
seedvr/projects/video_diffusion_sr/: utils.py
