[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedvr"
version = "1.0.0"
description = "SeedVR: Diffusion-based video restoration framework implementing multi-step and one-step restoration models"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jianyi Wang", email = "1120582412@qq.com"},
    {name = "Bytedance Ltd."},
]
maintainers = [
    {name = "Jianyi Wang", email = "1120582412@qq.com"},
]
keywords = [
    "video-restoration",
    "diffusion-models",
    "super-resolution",
    "video-enhancement",
    "computer-vision",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "einops",
    "torch",
    "torchvision",
    "omegaconf",
    "opencv-python",
    "diffusers",
    "accelerate",
    "rotary-embedding-torch",
    "transformers",
    "mediapy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
# Note: flash-attn is optional and requires manual installation with specific flags
# flash-attn: pip install flash_attn>=2.5.9.post1 --no-build-isolation
acceleration = [
    # Placeholder for documentation - requires manual installation
    # "flash-attn>=2.5.9.post1",  # Install with: pip install flash_attn --no-build-isolation
]

[project.urls]
Homepage = "https://github.com/ByteDance-Seed/SeedVR"
Repository = "https://github.com/ByteDance-Seed/SeedVR"
Issues = "https://github.com/ByteDance-Seed/SeedVR/issues"

[tool.setuptools]
packages = {find = {where = ["."], include = ["seedvr*"]}}

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
